--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			<form id="msform" style="min-height:450px;">					
 				<!-- fieldsets -->
 				<fieldset>
-					<h2 class="fs-title">Personal Details</h2>
-					<h3 class="fs-subtitle">Tell us something more about you</h3>
+					<h2 class="fs-title">What are you looking for?</h2>
+					<h3 class="fs-subtitle"></h3>
 					<div class="row checkDiv">
 						<div class="col-md-6 pr-lg-2 pl-lg-2 cleaningDiv">
 							<div class="outerDivInput">
