--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Maid Service in NCR, Chandigarh, Pabchkula, Mohali | Hire Maid in Delhi Gurugram, Noida, Chandigarh</title>
+  <title>Maid Service in NCR, Chandigarh, Panchkula, Mohali | Hire Maid in Delhi Gurugram, Noida, Chandigarh</title>
   <meta name="description" content="Kantabai is the best maids service agency where you can hire 24 hours maid services in NCR, Chandigarh, Pabchkula, Mohali as per your needs.">
   <meta property="og:title" content="Maid Service in Delhi, Noida, Gurugram, Chandigarh, Pabchkula, Mohali | Hire Maid in in Delhi, Noida, Gurugram, Chandigarh, Pabchkula, Mohali" />
   <meta property="og:type" content="Website" />
