replaced the old images with new image and change the content

--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/team-1.jpg" class="img-fluid" alt="">
+              <img src="img/kamwali9.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Personalized Service</h4>
-                  <span class="social pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                  <span class="social pl-2 pr-2">We dreams of having a clean house - But who dreams of actually doing the cleaning? Don't you worry! get now personalized services.</span>
                 </div>
               </div>
             </div>
@@ -360,11 +360,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/team-2.jpg" class="img-fluid" alt="">
+              <img src="img/kamwali7..jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Quick and Easy!</h4>
-                  <span class="social pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                  <span class="social pl-2 pr-2">Get easy and quick services on your doorstep for Residential,Home, Office commercial cleaning.Let us help you create a cleaner,happier home.</span>
                 </div>
               </div>
             </div>
@@ -372,11 +372,11 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/team-3.jpg" class="img-fluid" alt="">
+              <img src="img/kamwali6.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Honest and Transparent</h4>
-                  <span class="social pl-2 pr-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                  <span class="social pl-2 pr-2">Better Prices.Fully trained staff.Reliable,flexible schduling.</span>
                 </div>
               </div>
             </div>
@@ -386,7 +386,6 @@
       </div>
     </section>
 	<!-- #People Love Kantabai --> 
-	
 	
     <!--==========================
       Call To Action Section
