--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/kamwali9.jpg" class="img-fluid" alt="">
+              <img src="img/kanta1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Personalized Service</h4>
@@ -360,7 +360,7 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/kamwali7..jpg" class="img-fluid" alt="">
+              <img src="img/kanta2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Quick and Easy!</h4>
@@ -372,7 +372,7 @@
 
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/kamwali6.jpg" class="img-fluid" alt="">
+              <img src="img/kanta5.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Honest and Transparent</h4>
